external-crates/move/crates/move-compiler/tests/move_check/parser/recovery_parse_module_attributes.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[EC01002]: unexpected token
  ┌─ tests/move_check/parser/recovery_parse_module_attributes.move:7:1
  │
7 │ }
  │ ^
  │ │
  │ Unexpected '}'
  │ Expected an identifier

error[EC04007]: incompatible types
   ┌─ tests/move_check/parser/recovery_parse_module_attributes.move:11:36
   │    
11 │         public fun wrong_return(): u64 {
   │                                    --- Expected: 'u64'
   │ ╭──────────────────────────────────────^
   │ │ ╭────────────────────────────────────'
12 │ │ │     }
   │ ╰─│─────^ Invalid return expression
   │   ╰─────' Given: '()'

error[EC01002]: unexpected token
   ┌─ tests/move_check/parser/recovery_parse_module_attributes.move:17:1
   │
17 │ }
   │ ^
   │ │
   │ Unexpected '}'
   │ Expected an identifier

error[EC03002]: unbound module
   ┌─ tests/move_check/parser/recovery_parse_module_attributes.move:27:9
   │
27 │         0x42::M4::foo()
   │         ^^^^^^^^
   │         │
   │         Unbound module '0x42::M4'
   │         Did you mean: '0x42::M1'
